Compilation errors were fixed.